--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -57,8 +57,8 @@ jobs:
         with:
           devcard_id: 0b156485612243bfa39092f30071e276
           commit_filename: devcard.svg
-          commit_branch: main
-          dryrun: true
+          commit_branch: test-committer-default
+          dryrun: false
 
       -
         name: devcard.png
@@ -66,8 +66,10 @@ jobs:
         with:
           devcard_id: 0b156485612243bfa39092f30071e276
           commit_filename: devcard.png
-          commit_branch: main
-          dryrun: true
+          commit_branch: test-committer
+          committer_name: Paul Potaczala
+          committer_email: 30981922+centrumek@users.noreply.github.com
+          dryrun: false
 
   dependabot:
     needs:
